# Asistencia

./: CMakeLists.txt  addPerson.glade  destroy.py  io.py  main.cpp  main.glade  main.glade~  main.py  main1.glade~  mainui.glade  mainui.glade~  prueba.cpp
env/Scripts/: activate  activate.bat  activate.xsh
